--- a/styles.css
+++ b/styles.css
@@ -91,9 +91,13 @@ footer {
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+}
+
 .carousel {
   width: 50vw;
-  height: 100vh;
+  height: 75vh;
   position: relative;
 }
 
@@ -105,18 +109,16 @@ footer {
 
 .slide {
   position: absolute;
-  inset: 2;
+  inset: 0;
   opacity: 0;
   transition: 200ms opacity ease-in-out;
   transition-delay: 200ms;
-  width: 25vw;
-  height: 75vh;
 }
 
 .slide > img {
   display: block;
   width: 100%;
-  height: 100%;
+  height: 80%;
   object-fit: cover;
   object-position: center;
 }
@@ -153,11 +155,11 @@ footer {
 }
 
 .carousel-button.prev {
-  left: 1rem;
+  left: 0%;
 }
 
 .carousel-button.next {
-  right: 1rem;
+  right: 0%;
 }
 
 .alert {
@@ -204,4 +206,8 @@ ul#remove {
   padding: 0;
 }
 
-
+@media only screen and (max-width: 768px) {
+  .carousel-button {
+    font-size: 3rem;
+  }
+}
