--- a/styles.css
+++ b/styles.css
@@ -96,8 +96,8 @@ body {
 }
 
 .carousel {
-  width: 50vw;
-  height: 75vh;
+  width: 500px;
+  height: 1000px;
   position: relative;
 }
 
@@ -118,7 +118,7 @@ body {
 .slide > img {
   display: block;
   width: 100%;
-  height: 80%;
+  height: 60%;
   object-fit: cover;
   object-position: center;
 }
